<?xml version ="1.0" encoding ="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.navigationcomponentdemo.bottom.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_first" />

    <fragment
        android:id="@+id/DashboardFragment"
        android:name="com.example.navigationcomponentdemo.bottom.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_second" />

    <fragment
        android:id="@+id/NotificationFragment"
        android:name="com.example.navigationcomponentdemo.bottom.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_second" />
</navigation>
