<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LaunchActivity">

    <Button
        android:id="@+id/button_basic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_navigation"
        android:onClick="basicNav"
        app:layout_constraintBottom_toTopOf="@+id/button_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_bar_navigation"
        android:onClick="bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_basic"
        app:layout_constraintBottom_toTopOf="@+id/button_menu"/>

    <Button
        android:id="@+id/button_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_navigation"
        android:onClick="menuNav"
        app:layout_constraintBottom_toTopOf="@+id/button_drawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_bottom" />

    <Button
        android:id="@+id/button_drawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_navigation"
        android:onClick="drawerNav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
